@@ -1,76 +1,34 @@
-# trino-db2 — Trino 471 Fork
+# trino-db2
 
-A community fork of [IBM/trino-db2](https://github.com/IBM/trino-db2) upgraded from version **405 to 471**, with full support for **Apple Silicon Macs running Colima x86_64 + Rosetta**.
+A community fork of [IBM/trino-db2](https://github.com/IBM/trino-db2) progressively upgraded from version **405 → 471 → 480**, with full support for **Apple Silicon Macs running Colima x86_64 + Rosetta**.
 
-> Original plugin by IBM: https://github.com/IBM/trino-db2 (branch `leeyh0216/trino-405-release`)
+> Original plugin by IBM: https://github.com/IBM/trino-db2
 
 ---
 
 ## What This Is
 
-The IBM DB2 connector for Trino was last officially published for Trino 405. This fork manually upgrades it to Trino 471, fixing all breaking API changes and adding Rosetta compatibility.
+The IBM DB2 connector for Trino was last officially published for Trino 405. This fork upgrades it to **Trino 480**, fixing all breaking API changes across versions, and packages it as a ready-to-use Docker image published to Docker Hub as `nabilm/trino-db2`.
 
 ---
 
 ## Quick Start
 
-### Prerequisites
-- Docker (Colima or Docker Desktop)
-- Java 23+ and Maven 3.9+ (for local builds)
-
-### Build the Docker Image
+### Pull the image
 
 ```bash
-docker build \
-  --build-arg BASE=trinodb/trino:471 \
-  -t trino-db2:471 \
-  .
+docker pull nabilm/trino-db2:480
 ```
-
-> **Apple Silicon (Colima x86_64 + Rosetta):** The build uses `-Xint` to disable JIT and prevent SIGILL/SIGSEGV crashes. Expect a slower build (~15-30 min) but a stable image.
 
 ### Use in docker-compose
 
 ```yaml
 services:
   trino-coordinator:
-    image: trino-db2:471
+    image: nabilm/trino-db2:480
 ```
 
----
-
-## What Changed from IBM/trino-db2 (405 → 471)
-
-### `pom.xml`
-- Bumped `trino.version` to `471`
-- `javax.inject` and `javax.validation` set to `provided` scope — fixes Guice classloader split issues
-- `opentelemetry` dependencies added as `provided` (required by new `DriverConnectionFactory`)
-
-### `Dockerfile`
-- Builder image switched to `maven:3.9.9-eclipse-temurin-23` (Trino 471 requires Java 23)
-- `JAVA_TOOL_OPTIONS="-Xint"` during Maven build — prevents JVM crashes under Rosetta
-- `git init` step added — workaround for missing `.git` in Docker build context
-- `-Dgit-commit-id.skip=true` — skips git-commit-id plugin (no git history in Docker)
-- `-Xint` appended to base Trino image's `/etc/trino/jvm.config` — prevents runtime crashes under Rosetta
-
-### `DB2Client.java`
-- Removed `BaseJdbcConfig` from `super()` constructor call — no longer accepted in Trino 471
-- Updated column mapping method calls to match new Trino 471 signatures
-
-### `DB2ClientModule.java`
-- Added `OpenTelemetry` parameter to `getConnectionFactory()`
-- Replaced broken `CredentialProviderModule` install with proper Trino 471 binding:
-  - `CredentialConfig` bound via `configBinder`
-  - `CredentialProvider` provided via `@Provides` using `StaticCredentialProvider`
-  - `CredentialPropertiesProvider` provided via `@Provides` wrapping `DefaultCredentialPropertiesProvider`
-- Removed `binder.install(new CredentialProviderModule())` — throws `configurationFactory was not set` in Trino 471
-
-### `DB2Plugin.java`
-- Changed `new DB2ClientModule()` to `DB2ClientModule::new` (method reference) to satisfy Trino 471 API
-
----
-
-## Catalog Configuration
+### Catalog configuration
 
 Create `etc/catalog/db2.properties` in your Trino deployment:
 
@@ -81,85 +39,169 @@ connection-user=<user>
 connection-password=<password>
 ```
 
-For SSL:
-```properties
-connection-url=jdbc:db2://<host>:<port>/<database>:sslConnection=true;
+---
+
+## Building Locally
+
+### Prerequisites
+
+- Maven 3.9+
+- Java 18+ (JDK 24 required by Trino 480 parent POM — see Apple Silicon notes for workaround)
+
+### Build the plugin JAR
+
+```bash
+mvn clean package \
+  -Dmaven.test.skip=true \
+  -Dmaven.enforcer.skip=true
 ```
 
-### Configuration Properties
+Output: `target/trino-db2-480.zip` (plugin archive with all JARs)
 
-| Property Name | Description |
-|---|---|
-| `db2.varchar-max-length` | Max length of VARCHAR in CREATE/ALTER TABLE. Default: `32672` |
-| `db2.iam-api-key` | IBM Cloud IAM API Key (alternative to user/password) |
+### Build the Docker image
+
+```bash
+docker build \
+  --build-arg BASE=trinodb/trino:480 \
+  -t nabilm/trino-db2:480 \
+  -t nabilm/trino-db2:latest \
+  .
+```
+
+### Push to Docker Hub
+
+```bash
+docker login
+docker push nabilm/trino-db2:480
+docker push nabilm/trino-db2:latest
+```
 
 ---
 
 ## Apple Silicon / Rosetta Notes
 
-Trino 471 uses Java 23 which has JIT compiler bugs (SIGILL/SIGSEGV in C1) under Rosetta x86 emulation. The fix is `-Xint` in:
+This repo is developed on an **Apple Silicon Mac running Colima in x86_64 mode with Rosetta emulation**:
 
-1. The Docker builder — `JAVA_TOOL_OPTIONS="-Xint"` during `mvn install`
-2. The coordinator and worker `jvm.config` files
+```bash
+colima start \
+  --arch x86_64 \
+  --vm-type vz \
+  --vz-rosetta \
+  --cpu 6 \
+  --memory 12 \
+  --disk 60
+```
 
-This runs the JVM in pure interpreter mode — **stable but ~5-10x slower than native**.
+### Build issues under Rosetta
 
-**For full performance:** Switch Colima to ARM mode:
+JDK 24 JIT (both Temurin and Corretto) emits x86_64 instructions that Rosetta cannot translate, causing **SIGILL crashes**. The fix: build with your local JDK and skip the enforcer:
+
+```bash
+mvn clean package \
+  -Dmaven.test.skip=true \
+  -Dmaven.enforcer.skip=true
+```
+
+If you get a JDK vendor enforcer failure, also add:
+
+```bash
+  -Dmaven.compiler.release=18 \
+  -Dmaven.compiler.source=18 \
+  -Dmaven.compiler.target=18
+```
+
+The resulting JAR runs fine inside `trinodb/trino:480` which ships with JDK 25.
+
+### Runtime under Rosetta
+
+The Dockerfile appends `-Xint` to `/etc/trino/jvm.config`, disabling JIT at runtime. This is **~5-10x slower** than native JIT but stable under Rosetta x86 emulation.
+
+For full native performance, switch Colima to ARM64:
+
 ```bash
 colima stop
-colima start --arch aarch64 --vm-type vz
+colima start --arch aarch64 --vm-type vz --cpu 6 --memory 12 --disk 60
 ```
-No `-Xint` needed, full JIT, full speed.
 
 ---
 
-## MinIO AIStor + Iceberg REST Catalog
+## What Changed from IBM/trino-db2
 
-This plugin was tested alongside MinIO AIStor as the Iceberg REST catalog backend. Trino 471 `iceberg.properties`:
+### 405 → 471
+
+| File | Change |
+|---|---|
+| `pom.xml` | Parent version bumped to `471` |
+| `pom.xml` | `javax.inject`, `javax.validation` moved to `provided` scope |
+| `pom.xml` | OpenTelemetry dependencies added as `provided` |
+| `DB2Client.java` | Removed `BaseJdbcConfig` from `super()` constructor |
+| `DB2Client.java` | Updated column mapping method signatures |
+| `DB2ClientModule.java` | Added `OpenTelemetry` param to `getConnectionFactory()` |
+| `DB2ClientModule.java` | Replaced `CredentialProviderModule` with explicit `@Provides` bindings |
+| `DB2Plugin.java` | Changed `new DB2ClientModule()` to `DB2ClientModule::new` |
+
+### 471 → 480
+
+| File | Change |
+|---|---|
+| `pom.xml` | Parent version bumped to `480` |
+| `pom.xml` | `javax.validation:validation-api` → `jakarta.validation:jakarta.validation-api` (version managed by parent) |
+| `pom.xml` | `javax.inject:javax.inject` removed (managed internally by Guice) |
+| `pom.xml` | `com.google.inject:guice` — added `<classifier>classes</classifier>` |
+| `pom.xml` | `org.openjdk.jol:jol-core` removed (dropped from Trino 480 SPI) |
+| `pom.xml` | All `test`-scoped Trino artifacts removed (not published to Maven Central for 480) |
+| `DB2Config.java` | `import javax.validation.constraints.Min` → `import jakarta.validation.constraints.Min` |
+| `Dockerfile` | Default `BASE` changed to `trinodb/trino:480` |
+| `Dockerfile` | Removes `-Djava.security.manager=allow` from jvm.config — unsupported in JDK 25 |
+| `jvm.config` (coordinator + worker) | Removed `-Djava.security.manager=allow` — crashes JVM on startup in JDK 25 |
+
+---
+
+## Configuration Reference
+
+### Required properties
+
+| Property | Description |
+|---|---|
+| `connector.name` | Must be `db2` |
+| `connection-url` | JDBC URL: `jdbc:db2://<host>:<port>/<database>` |
+| `connection-user` | DB2 username |
+| `connection-password` | DB2 password |
+
+### Optional properties
+
+| Property | Default | Description |
+|---|---|---|
+| `db2.varchar-max-length` | `32672` | Max VARCHAR length in CREATE/ALTER TABLE |
+| `db2.iam-api-key` | — | IBM Cloud IAM API key (replaces user/password) |
+
+### SSL
 
 ```properties
-connector.name=iceberg
-iceberg.catalog.type=rest
-iceberg.rest-catalog.uri=http://local-minio:9000/_iceberg
-iceberg.rest-catalog.warehouse=lakehouse
-iceberg.rest-catalog.sigv4-enabled=true
-iceberg.rest-catalog.signing-name=s3tables
-iceberg.rest-catalog.vended-credentials-enabled=true
-iceberg.unique-table-location=true
-fs.native-s3.enabled=true
-fs.hadoop.enabled=false
-s3.endpoint=http://local-minio:9000
-s3.path-style-access=true
-s3.region=local
-s3.aws-access-key=<access-key>
-s3.aws-secret-key=<secret-key>
+connection-url=jdbc:db2://<host>:<port>/<database>:sslConnection=true;
 ```
-
-Key points:
-- `iceberg.rest-catalog.security=SIGV4` is **not** a valid value in Trino 471 — use `sigv4-enabled=true` instead
-- `signing-name=s3tables` — MinIO AIStor implements the AWS S3 Tables API
-- The warehouse must be created as a **table bucket** via the MinIO AIStor CLI or Console before use
 
 ---
 
-## Replicating a DB2 Table to Iceberg (MinIO)
+## Security Scan Notes (JFrog Xray)
 
-```sql
--- Create a schema in Iceberg
-CREATE SCHEMA iceberg.myschema;
+### ✅ Apache Ranger — CVE-2025-59059 / CVE-2025-59060 (Fixed)
 
--- Copy a DB2 table to Iceberg in one shot
-CREATE TABLE iceberg.myschema.mytable AS
-SELECT * FROM db2.myschema.mytable;
+`trinodb/trino:471` bundled **Apache Ranger 2.6.0**, vulnerable to RCE and hostname bypass.
+`trinodb/trino:480` ships with **Apache Ranger 2.8.0** — both CVEs are resolved.
 
--- Verify
-SELECT * FROM iceberg.myschema.mytable;
-```
+### ⚠️ Apache FreeMarker — ProtectionDomain classloader escape (Suppress)
+
+FreeMarker is used **internally** by Trino for template rendering. No Trino API accepts user-supplied FreeMarker templates. The attack surface does not exist in standard deployments.
+
+Suggested Xray suppression justification:
+> *FreeMarker in Trino is an internal dependency used for server-side HTML/text rendering. No user-supplied FreeMarker templates are processed. The classloader escape vector requires the attacker to already control template input, which is not possible through any public Trino API or connector interface.*
 
 ---
 
 ## Links
 
 - [IBM/trino-db2](https://github.com/IBM/trino-db2) — original plugin
-- [Trino 471 docs](https://trino.io/docs/current/)
-- [MinIO AIStor Tables](https://docs.min.io/enterprise/aistor-object-store/administration/aistor-tables/)
+- [Trino 480 release notes](https://trino.io/docs/current/release/release-480.html)
+- [Docker Hub: nabilm/trino-db2](https://hub.docker.com/r/nabilm/trino-db2)
+- [trino_db2_minio](../trino_db2_minio) — full local dev stack using this image
